--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+torch
+nltk
 umap-learn
 visdom
 librosa>=0.8.0
@@ -14,3 +16,4 @@ PyQt5
 multiprocess
 numba
 webrtcvad; platform_system != "Windows"
+jamo
